--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "multer": "^2.0.2",
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^7.0.11",
-    "qrcode": "^1.5.4"
+    "qrcode": "^1.5.4",
+    "streamifier": "^0.1.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
