--- a/.env
+++ b/.env
@@ -7,6 +7,6 @@ MONGO_URI="mongodb+srv://bilalnaqvi592:bilaldb123@optics-glass-cluster.1icwe.mon
 JWT_SECRET="0c1f4e6a9d5e8f3c2b1a0d9e8f7c6b5a4e3d2c1b0a9f8e7d6c5b4a3"
 EMAIL_USER=sarawaseem976@gmail.com
 EMAIL_PASS=kjwrscldzejefdfp
-CLIENT_URI=http://localhost:5173
+CLIENT_URI=https://rangrez-events-front-end.vercel.app
 
 
